# TWBVoice-data-packaging

./: .gitignore  README.md  pyproject.toml
examples/sample-kanuri/: config.yaml
examples/sample-kanuri/raw/: dataset_27_data.json  dataset_29_data.json  dataset_31_data.json
src/twbvoice_pack/: __init__.py  analyze.py  card.py  cli.py  config.py  enrich.py  healthcheck.py  hf_upload.py  policies.py  tarball.py
templates/: dataset_card.md.j2
